# vehicle_controller

./: .gitignore  CMakeLists.txt  README.md  carrot_controller.cpp  carrot_controller.h  mainpage.dox  melman_mpc_controller.h  package.xml
cfg/: CarrotControllerParams.cfg  ControllerType.cfg  DafControllerParams.cfg  LqrControllerParams.cfg  PdParams.cfg  PdParamsArgo.cfg  PurePursuitControllerParams.cfg  pd_params.cfg
cmake/Modules/: FindACADOToolkit.cmake
include/vehicle_controller/: acado_mpc_wrapper.h  ackermann_pure_pursuit_controller.h  carrot_controller.h  controller.h  controller_node.h  daf_controller.h  differential_drive_controller.h  differential_pure_pursuit.h  differential_pure_pursuit_controller.h  ekf.h  four_wheel_steer_controller.h  lqr_controller.h  melman_mpc_wrapper.h  motion_parameters.h  mpc.h  ps3d.h  ps3d_motion_parameters.h  pure_pursuit_ackermann.h  quaternions.h  robot_control_state.h  stuck_detector.h  utility.h  vehicle_control_interface.h
launch/: asterix_controller.launch  bertl_controller.launch  bertl_controller.launch~  ec_scout_controller.launch  jasmine_controller.launch  monstertruck_controller.launch  mpc_node.launch  obelix_controller.launch  test_jasmine_controller.launch
src/: CMakeLists.txt  acado_mpc_wrapper.cpp  ackermann_pure_pursuit_controller.cpp  carrot_controller.cpp  controller.cpp  controller_node.cpp  daf_controller.cpp  differential_drive_controller.cpp  differential_pure_pursuit_controller.cpp  ekf.cpp  four_wheel_steer_controller.cpp  lqr_controller.cpp  melman_mpc_wrapper.cpp  mpc.cpp  ps3d.cpp  stuck_detector.cpp  utility.h
